objects/UNITY_MuleHierarchyMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Child__c</fullName>
        <label>Child</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_Tags__c</fullName>
        <label>Sibling Tags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>UNITY Mule Hierarchy Mapping</label>
</CustomObject>